"""Search domain entities"""
from datetime import datetime
from typing import List, Optional, Dict, Any
from beanie import Document, Indexed
from pydantic import Field
from pymongo import IndexModel


class Concept(Document):
    """Extracted concepts from search query"""
    search_id: str
    concepts: List[List[str]]  # Array of arrays: [["concept1", "synonym1"], ["concept2", "synonym2"]]
    created_at: datetime = Field(default_factory=datetime.utcnow)
    
    class Settings:
        name = "concepts"
        indexes = [
            IndexModel([("search_id", 1)], name="search_id_1"),
        ]


class Resume(Document):
    """Resume entity"""
    search_id: str
    hh_id: Optional[str] = None  # HeadHunter resume ID
    
    # Basic info
    name: Optional[str] = None
    age: Optional[int] = None
    city: Optional[str] = None
    title: Optional[str] = None
    
    # Salary
    salary: Optional[int] = None
    currency: Optional[str] = None
    
    # Raw data from HeadHunter
    raw_data: Dict[str, Any] = Field(default_factory=dict)
    
    # Scoring
    preliminary_score: Optional[float] = None
    ai_score: Optional[int] = Field(default=None, ge=1, le=10)
    
    # AI Analysis
    ai_summary: Optional[str] = None
    ai_questions: List[str] = Field(default_factory=list)
    ai_generated_detected: bool = False
    analyzed: bool = False
    
    # Detailed evaluation (new)
    evaluation_details: Optional[Dict[str, Any]] = None  # Category scores, match percentage, etc.
    match_percentage: Optional[float] = None  # Overall match with vacancy (0-100)
    match_explanation: Optional[str] = None  # Detailed explanation why candidate matches
    strengths: List[str] = Field(default_factory=list)  # Key strengths
    weaknesses: List[str] = Field(default_factory=list)  # Areas for improvement
    recommendation: Optional[str] = None  # AI recommendation
    red_flags: List[str] = Field(default_factory=list)  # Detected red flags
    interview_focus: Optional[str] = None  # What to focus on during interview
    career_trajectory: Optional[str] = None  # Career trajectory analysis
    
    # Timestamps
    created_at: datetime = Field(default_factory=datetime.utcnow)
    
    class Settings:
        name = "resumes"
        indexes = [
            IndexModel([("search_id", 1)], name="search_id_1"),
            IndexModel([("hh_id", 1)], name="hh_id_1", sparse=True),  # Not unique - same resume can be in multiple searches
            IndexModel([("search_id", 1), ("hh_id", 1)], name="search_id_hh_id_1", unique=True, sparse=True),  # Unique combination
            IndexModel([("ai_score", -1)], name="ai_score_-1"),  # Descending for sorting
            IndexModel([("preliminary_score", -1)], name="preliminary_score_-1"),
        ]


class Search(Document):
    """Search entity"""
    user_id: str
    city: str
    query: str
    
    # Status
    status: str = Field(default="pending")  # pending, processing, completed, failed
    
    # Results
    total_found: int = 0
    analyzed_count: int = 0
    
    # Progress tracking
    processed_count: int = 0  # How many resumes processed so far
    total_to_process: int = 0  # Total resumes to process
    
    # Timestamps
    created_at: datetime = Field(default_factory=datetime.utcnow)
    completed_at: Optional[datetime] = None
    
    # Error handling
    error_message: Optional[str] = None
    
    # Settings
    settings: Dict[str, Any] = Field(default_factory=dict)
    
    class Settings:
        name = "searches"
        indexes = [
            IndexModel([("user_id", 1)], name="user_id_1"),
            IndexModel([("status", 1)], name="status_1"),
            IndexModel([("created_at", -1)], name="created_at_-1"),  # Descending for recent first
        ]
